# ethoslayerAI-1

./: .env  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.lovable/: plan.md
programs/ethos_escrow/: Anchor.toml  Cargo.toml  README.md
programs/ethos_escrow/src/: lib.rs
scripts/: create-devnet-audd.mjs
src/: App.tsx  index.css
src/components/: EthosAlignment.tsx  EthosOnboardingModal.tsx  Footer.tsx  GovernanceHealthModule.tsx  Header.tsx  ManipulationAlert.tsx  MetricCard.tsx  ProtectedRoute.tsx  ScoreGauge.tsx  ScoreTransparencyPanel.tsx  WalletBanner.tsx  WalletConnectButton.tsx
src/components/escrow/: CreateEscrowDialog.tsx  StatusBadges.tsx
src/hooks/: useAuth.ts
src/integrations/supabase/: types.ts
src/lib/: escrow.ts  ethos.ts  mockData.ts  scoreBreakdown.ts  solana.ts  solanaConfig.ts  solanaTx.ts  trustScore.ts  watchlist.ts
src/pages/: Analyze.tsx  Auth.tsx  EscrowDetail.tsx  Index.tsx  Methodology.tsx  ResetPassword.tsx  Settlement.tsx  TransactionHistory.tsx  Values.tsx  Watchlist.tsx
src/providers/: SolanaWalletProvider.tsx
supabase/: config.toml
supabase/functions/release-escrow/: index.ts
supabase/functions/solana-rpc/: index.ts
supabase/migrations/: 20260225201828_fcda3954-f29e-49eb-ae90-f846d2532bac.sql  20260523102212_a334af56-5344-412a-91ee-8af4faea59df.sql  20260623162542_1f303c7e-10e3-406c-b8f6-38c5896e33b2.sql
