[package]
name = "ethos_escrow"
version = "0.1.0"
description = "EthosLayer programmable AUDD escrow on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ethos_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
